# NotionGroceryListGenerator

./: .gitignore  README.md  config_template.json  notion_grocery_list_generator.py  pyproject.toml
notiongrocerylistgenerator/: Ingredient.py  main.py  notion_api.py  notion_grocery_list_generator.py
notiongrocerylistgenerator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notiongrocerylistgenerator/cli/: woolworths_groceries.py
notiongrocerylistgenerator/grocery_apis/: woolworths.py
