[project]
name = "notiongrocerylistgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-cookie3>=0.20.1",
    "requests>=2.32.5",
]



[project.scripts]
grocery_shop = "notiongrocerylistgenerator.cli.woolworths_groceries:main"